feat: roles and initial account create endpoint added
