# backend/lib/backend_web/controllers/account_controller.ex
@@ -17,10 +17,16 @@ defmodule BackendWeb.AccountController do
           description("An user account of the application")
 
           properties do
-            id(:number, "Unique identifier", required: true)
-            email(:string, "User email", required: true)
+            id(:number, "Unique identifier")
+            email(:string, "User email")
             first_name(:string, "User first name")
             last_name(:string, "User last name")
+
+            roles(:array, "User roles",
+              enum: [:admin, :teacher, :student],
+              default: [:student]
+            )
+
             group_id(:number, "Id od the user group, if exists")
             inserted_at(:datetime, "Date and time of account creation")
             updated_at(:datetime, "Date and time of account last update")
@@ -31,6 +37,7 @@ defmodule BackendWeb.AccountController do
             email: "test@example.com",
             first_name: "John",
             last_name: "Doe",
+            roles: ["student"],
             group_id: 1,
             inserted_at: "2024-07-11T05:47:50Z",
             updated_at: "2024-07-11T05:47:50Z"
@@ -52,14 +59,46 @@ defmodule BackendWeb.AccountController do
             email(:string, "User email", required: true)
             first_name(:string, "User first name")
             last_name(:string, "User last name")
-            group_id(:number, "Id od the user group, if exists")
+            group_id(:number, "Id of the user group, if exists")
+            password(:string, "User password", required: true)
+            password_confirmation(:string, "User password confirmation", required: true)
+
+            roles(:array, "User roles",
+              enum: [:admin, :teacher, :student],
+              default: [:student],
+              required: true
+            )
           end
 
           example(%{
             email: "test@example.com",
             first_name: "John",
             last_name: "Doe",
-            group_id: 1
+            group_id: 1,
+            roles: ["student"],
+            password: "Qwerty123!",
+            password_confirmation: "Qwerty123!"
+          })
+        end,
+      NewDefaultAccount:
+        swagger_schema do
+          title("New default admin account")
+          description("Data object to create new default admin account")
+
+          properties do
+            email(:string, "Admin email", required: true)
+            first_name(:string, "Admin first name")
+            last_name(:string, "Admin last name")
+            password(:string, "Admin password", required: true)
+            password_confirmation(:string, "Admin password confirmation", required: true)
+          end
+
+          example(%{
+            email: "test@example.com",
+            first_name: "John",
+            last_name: "Doe",
+            password: "Qwerty123!",
+            password_confirmation: "Qwerty123!"
           })
         end,
       UpdateAccount:
@@ -71,12 +110,18 @@ defmodule BackendWeb.AccountController do
             first_name(:string, "User first name")
             last_name(:string, "User last name")
             group_id(:number, "Id od the user group, if exists")
+
+            roles(:array, "User roles",
+              enum: [:admin, :teacher, :student],
+              default: [:student]
+            )
           end
 
           example(%{
             first_name: "John",
             last_name: "Doe",
-            group_id: 1
+            group_id: 1,
+            roles: ["student"]
           })
         end
     }
@@ -88,6 +133,9 @@ defmodule BackendWeb.AccountController do
     description("Query for all accounts. This operation doesn't support pagination yet.")
     produces("application/json")
     tag("Accounts")
+
+    security([%{bearer: []}])
+
     response(200, "Success", Schema.ref(:Accounts))
   end
 
@@ -103,11 +151,15 @@ defmodule BackendWeb.AccountController do
     produces("application/json")
     tag("Accounts")
 
+    security([%{bearer: []}])
+
     parameters do
       account(:body, Schema.ref(:NewAccount), "Data to create account", required: true)
     end
 
-    response(200, "Success", Schema.ref(:Accounts))
+    response(201, "Success", Schema.ref(:Accounts))
+    response(422, "Unprocessable entity (something wrong with body)")
+    response(400, "Bad request (Unknown error)")
   end
 
   def create(conn, %{"account" => account_params}) do
@@ -119,12 +171,54 @@ defmodule BackendWeb.AccountController do
     end
   end
 
+  swagger_path :init do
+    post("/accounts/init")
+    summary("Create new default admin account")
+
+    description(
+      "Create new default admin account. Allowed only when no accounts presents in the database on application first startup"
+    )
+
+    produces("application/json")
+    tag("Accounts")
+
+    parameters do
+      account(:body, Schema.ref(:NewDefaultAccount), "Data to create new default admin account",
+        required: true
+      )
+    end
+
+    response(201, "Success")
+    response(422, "Unprocessable entity (something wrong with body)")
+    response(400, "Bad request (Unknown error)")
+  end
+
+  def init(conn, %{"account" => account_params}) do
+    Accounts.is_default_admin_exists?()
+    |> do_init(conn, account_params)
+  end
+
+  defp do_init(true, conn, _params), do: conn |> send_resp(:conflict, "")
+
+  defp do_init(false, conn, params) do
+    account_params =
+      params
+      |> Map.put("roles", ["admin"])
+      |> Map.put("group_id", nil)
+
+    with {:ok, _} <- Accounts.create_account(account_params) do
+      conn |> send_resp(:created, "")
+    end
+  end
+
   swagger_path :show do
     get("/accounts/{id}")
     summary("Query single account by id")
     description("Query single account by id.")
     produces("application/json")
     tag("Accounts")
+
+    security([%{bearer: []}])
 
     parameters do
       id(:path, :number, "Account id", required: true)
@@ -146,6 +240,8 @@ defmodule BackendWeb.AccountController do
     description("Update existing account.")
     produces("application/json")
     tag("Accounts")
+
+    security([%{bearer: []}])
 
     parameters do
       id(:path, :number, "Account id", required: true)
@@ -171,6 +267,8 @@ defmodule BackendWeb.AccountController do
     summary("Delete account by id")
     description("Delete account by id.")
     tag("Accounts")
+
+    security([%{bearer: []}])
 
     parameters do
       id(:path, :number, "Account id", required: true)
