# backend/lib/backend_web/controllers/account_json.ex
@@ -21,6 +21,7 @@ defmodule BackendWeb.AccountJSON do
       email: account.email,
       last_name: account.last_name,
       first_name: account.first_name,
+      roles: account.roles,
       group_id: account.group_id,
       created_at: account.inserted_at,
       updated_at: account.updated_at
